css/style.css
/* ... */
/* end of startup animations and sequences -----------------*/
h3, h4 {
	margin: 0 auto;
	text-align: center;
	font-family: 'Audiowide', 'cursive'; 
	color: rgba(255, 255, 255, .8);
}
h6 {
	font-family: 'Audiowide', 'cursive';
	line-height: 1;
}
h5 {
	font-size: 1em;
	font-family: 'Audiowide', 'cursive';
	color: silver;
}
p {
	line-height: 1.3;
}
.sub-font-scale {
	font-size: 2em;
}
.container {
	overflow: hidden;
}
.test {
	margin: 0 auto;
	width: 8.8%;
	color: white;
	margin: 0.7%;
	margin-left: 1.2%;
	display: inline-block;
	border: 2px solid rgba(0, 255, 0, 1);
  transition : background-color 200ms linear; 
  -webkit-transition : background-color 100ms linear; 
  -moz-transition : background-color 100ms linear;
  -o-transition : background-color 100ms linear;
	border-radius: 5px;
	-webkit-box-shadow: inset -7px 7px 15px 0 rgba(0,255,0,0.55);
	-moz-box-shadow: inset -7px 7px 15px 0 rgba(0,255,0,0.55);
	box-shadow: inset -7px 7px 15px 0 rgba(0,255,0,0.55);
  outline: 1px solid transparent;

}
.test:hover {
	border: 2px solid rgba(255, 0, 0, 1);
	-webkit-box-shadow: inset -7px 7px 15px 0 rgba(255,0,0,0.55);
	-moz-box-shadow: inset -7px 7px 15px 0 rgba(255,0,0,0.55);
	box-shadow: inset -7px 7px 15px 0 rgba(255,0,0,0.55);
	outline: 1px solid transparent;
}
.markers {
	color: silver;
	width: 100%;
	padding-top: 9%;
	font-family: 'Audiowide', 'cursive'; 
	text-align: center;
	z-index: 20;
}
span {
	font-size: 0;
	width: 1%;
	background-color: yellow;
}
.board-container {
	margin: 0 auto;
	margin-left: 30.5%;
	margin-top: 4%;
	width: 80%;
	position: relative;
	transform: translate3d(0,0,0);
	-webkit-transform: translate3d(0,0,0);
	-webkit-transform: translateZ(0);
}	
.channel-right {
	width: 6%;
	height: 0;
	padding-bottom: 33%;
	float: right;
}
.channel-left {
	width: 8%;
	height: 0;
	padding-bottom: 33%;
	float: left;
}
.nav-bar {
	width: 100%;
	background: url("../images/bg_nav_metal.png");
	height: 0;
	padding-bottom: 5%;
}
.scoreboard {
	width: 100%;
	padding-bottom: 3%;
}
.top-scoreboard {
	width: 100%;
	position: relative;
}
.bottom-scoreboard {
	width: 100%;
}
#main-timer {
	margin: 0 auto;
	margin-top: 1%;
	width: 30%;
	border: 2px solid rgba(0, 255, 0, 1);
	border-radius: 10px;
	-webkit-box-shadow: inset -7px 7px 15px 0px rgba(0,255,0,0.55);
	-moz-box-shadow: inset -7px 7px 15px 0px rgba(0,255,0,0.55);
	box-shadow: inset -7px 7px 15px 0px rgba(0,255,0,0.55);
}
.timer-text {
	color: rgba(255, 255, 255, .8);
	text-shadow: 1px 1px 1px rgba(0, 255, 0, .6);
	text-align: center;
	font-family: 'Audiowide', 'cursive';
	line-height: -2;
}
#timer-name {
	width: 40%;
	margin: 0 auto;
	/*background: url("../images/bg_nav_metal.png");*/
	text-shadow: 1px 1px 1px rgba(0, 255, 0, .2);
	display: inline-block;
	text-align: center;
	color: rgba(255, 255, 255, .8);
	float: left;
}
#timer-count {
	width: 40%;
	display: inline-block;
	text-align: center;
	line-height: 0;
	float: left;
}
.timer-font-scale {
	font-size: 1em;
	margin-top: 0;
}
.white {
	color: rgba(255, 255, 255, 0.7);
	background-color: rgba(0, 255, 0, 0.3);
}
.scaling-font {
	text-align: left;
	padding: 0 5%;
}
.momentum-bar {
	width: 30%;
	margin: 0 auto;
	margin-top: 1%;
	height: 20px;
}
.bar1, .bar2 {
	width: 50%;
	float: left
}
.bar2 {
	float: right;
}
.scoring-bar1, .scoring-bar2 {
	width: 0;
	height: 10px;
	background-color: rgba(22, 120, 255, 0.5);
	border-radius: 100px 0 0 100px;
	display: block;
	float: right;
}
.scoring-bar2 {
	width: 0;
	background-color: rgba(111, 50, 177, 0.5);
	border-radius: 0 100px 100px 0 ;
	float: left;
}
#p1-scorebox {
	width: 12%;
	margin-left: 5%;
	margin-top: 1%;
	float: left;
	border: 4px solid rgba(22, 120, 255, 1);
	border-radius: 10px;
	overflow: hidden;
	-webkit-box-shadow: inset -7px 7px 15px 0px rgba(13, 49, 99, 1);
	-moz-box-shadow: inset -7px 7px 15px 0px rgba(13, 49, 99, 1);
	box-shadow: inset -7px 7px 15px 0px rgba(13, 49, 99, 1);
}
#p1-score-name {
	width: 100%;
	float: left;
	padding-left: 5%;
	background: url("../images/bg_nav_metal.png");
	text-shadow: 3px 3px 5px rgba(22, 120, 255, 1);
}
#p1-score {
	width: 100%;
	float: left;
	text-shadow: 2px 2px 2px rgba(22, 120, 255, 1);
}
#p1-timer-name {
	width: 30%;
	margin: 0 auto;
	text-align: center;
	/*background: url("../images/bg_nav_metal.png");*/
	border-radius: 10px 0 0 0;
	text-shadow: 3px 3px 5px rgba(22, 120, 255, 1);
	display: inline-block;
	border-right: 1px solid rgba(22, 120, 255, 1);
	border-bottom: 1px solid rgba(22, 120, 255, 1);
	float: left;
}
#p1-timer {
	width: 30%;
	text-align: center;
	text-shadow: 2px 2px 2px rgba(22, 120, 255, 1);
	border-right: 1px solid rgba(22, 120, 255, 1);
	display: inline-block;
	float: left;
}
#p2-scorebox {
	width: 12%;
	margin-right: 5%;
	margin-top: 1%;
	float: right;
	border: 4px solid rgba(111, 50, 177, 1);
	border-radius: 10px;
	overflow: hidden;
	-webkit-box-shadow: inset -7px 7px 15px 0px rgba(83, 13, 159,1);
	-moz-box-shadow: inset -7px 7px 15px 0px rgba(83, 13, 159,1);
	box-shadow: inset -7px 7px 15px 0px rgba(83, 13, 159,1);
}
#p2-score-name {
	width: 100%;
	padding-right: 5%;
	float: right;
	text-align: right;
	background: url("../images/bg_nav_metal.png");
	text-shadow: 3px 3px 3px rgba(111, 50, 177, 1);
}
#p2-score {
	width: 100%;
	float: right;
	text-shadow: 2px 2px 2px rgba(111, 50, 177, 1);
}
#p2-timer-name {
	width: 30%;
	text-align: center;
	/*background: url("../images/bg_nav_metal.png");*/
	border-radius: 0 10px 0 0;
	text-shadow: 3px 3px 3px rgba(111, 50, 177, 1);
	display: inline-block;
	border-left: 1px solid rgba(83, 13, 159, 1);
	border-bottom: 1px solid rgba(83, 13, 159, 1);
	float: left;
}
#p2-timer {
	width: 30%;
	text-align: center;
	display: inline-block;
	text-shadow: 2px 2px 2px rgba(111, 50, 177, 1);
	border-left: 1px solid rgba(83, 13, 159, 1);
	float: left;
}
#title {
	margin: 0 auto;
	width: 30%;
}
/* ... */

